--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -102,6 +102,7 @@ BITCOIN_CORE_H = \
   rpcprotocol.h \
   rpcserver.h \
   script.h \
+  script_wallet.h \
   serialize.h \
   sync.h \
   threadsafety.h \
@@ -206,6 +207,7 @@ libbitcoin_common_a_SOURCES = \
   netbase.cpp \
   protocol.cpp \
   script.cpp \
+  script_wallet.cpp \
   $(BITCOIN_CORE_H)
 
 # util: shared between all executables.
