--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -225,6 +225,7 @@ libbitcoin_common_a_SOURCES = \
   script/script.cpp \
   script/sigcache.cpp \
   script/sign.cpp \
+  script/standalone.cpp \
   script/standard.cpp \
   script/txhasher.cpp \
   $(BITCOIN_CORE_H)
