--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -99,6 +99,7 @@ BITCOIN_CORE_H = \
   netbase.h \
   net.h \
   noui.h \
+  policy.h \
   pow.h \
   protocol.h \
   random.h \
@@ -162,6 +163,7 @@ libbitcoin_server_a_SOURCES = \
   miner.cpp \
   net.cpp \
   noui.cpp \
+  policy.cpp \
   pow.cpp \
   rpcblockchain.cpp \
   rpcmining.cpp \
