Introduce CNodePolicy for putting isolated node policy code and parameters on
Initially populated with policy-specific code moved from AcceptToMemoryPool.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,6 +107,7 @@ BITCOIN_CORE_H = \
   netbase.h \
   net.h \
   noui.h \
+  policy.h \
   pow.h \
   protocol.h \
   pubkey.h \
@@ -173,6 +174,7 @@ libbitcoin_server_a_SOURCES = \
   miner.cpp \
   net.cpp \
   noui.cpp \
+  policy.cpp \
   pow.cpp \
   rest.cpp \
   rpcblockchain.cpp \
