Policy: Create CPolicy interface and CStandardPolicy class implementing it

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -108,6 +108,7 @@ BITCOIN_CORE_H = \
   netbase.h \
   net.h \
   noui.h \
+  policy.h \
   pow.h \
   primitives/block.h \
   primitives/transaction.h \
@@ -177,6 +178,7 @@ libbitcoin_server_a_SOURCES = \
   miner.cpp \
   net.cpp \
   noui.cpp \
+  policy.cpp \
   pow.cpp \
   rest.cpp \
   rpcblockchain.cpp \
