--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -107,6 +107,7 @@ BITCOIN_CORE_H = \
   netbase.h \
   net.h \
   noui.h \
+  policy.h \
   pow.h \
   primitives/block.h \
   primitives/transaction.h \
@@ -175,6 +176,7 @@ libbitcoin_server_a_SOURCES = \
   miner.cpp \
   net.cpp \
   noui.cpp \
+  policy.cpp \
   pow.cpp \
   rest.cpp \
   rpcblockchain.cpp \
