--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -89,6 +89,7 @@ BITCOIN_CORE_H = \
   compat.h \
   compressor.h \
   consensus/consensus.h \
+  consensus/validation.h \
   core_io.h \
   crypter.h \
   db.h \
