--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -91,6 +91,7 @@ BITCOIN_CORE_H = \
   compressor.h \
   consensus/consensus.h \
   consensus/params.h \
+  consensus/pow.h \
   consensus/validation.h \
   core_io.h \
   crypter.h \
@@ -111,7 +112,6 @@ BITCOIN_CORE_H = \
   net.h \
   noui.h \
   policy.h \
-  pow.h \
   primitives/block.h \
   primitives/transaction.h \
   protocol.h \
@@ -180,7 +180,6 @@ libbitcoin_server_a_SOURCES = \
   net.cpp \
   noui.cpp \
   policy.cpp \
-  pow.cpp \
   rest.cpp \
   rpcblockchain.cpp \
   rpcmining.cpp \
@@ -245,6 +244,7 @@ libbitcoin_common_a_SOURCES = \
   coinscache.cpp \
   compressor.cpp \
   consensus/consensus.cpp \
+  consensus/pow.cpp \
   primitives/block.cpp \
   primitives/transaction.cpp \
   core_read.cpp \
